# OpenComposite

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENCE_DEBUG_BREAK.txt  OpenOVR.sln  README.md  appveyor.yml  configure.cmd  configure.sh  format-all.sh  openvrpaths.vrpath.in  stubber.py
DrvOculus/: DrvOculus.cpp  DrvOculusCommon.h  OculusBackend.cpp  OculusBackend.h  OculusBackendGuardian.cpp  OculusBackendMirror.cpp  OculusBackendSubmit.cpp  OculusDevice.cpp  OculusDevice.h  OculusHMD.cpp  OculusHMD.h
DrvOculus/pub/: DrvOculus.h
DrvOpenXR/: DrvOpenXR.cpp  XrBackend.cpp  XrBackend.h  XrController.cpp  XrController.h  XrDriverPrivate.h  XrGenericTracker.cpp  XrGenericTracker.h  XrHMD.cpp  XrHMD.h  XrTrackedDevice.cpp  XrTrackedDevice.h
DrvOpenXR/pub/: DrvOpenXR.h
DrvOpenXR/tmp_gfx/: TemporaryD3D11.cpp  TemporaryD3D11.h  TemporaryGraphics.cpp  TemporaryGraphics.h  TemporaryVk.cpp  TemporaryVk.h
OCOVR/: dllmain.cpp  linux.cpp  openvr_api.cpp  openvr_api_0_9_12.cpp  plat.h  windows.cpp
OpenOVR/: BaseCommon.h  ImplAccess.h  OpenOVR.cpp  OpenOVR.vcxproj  OpenOVR.vcxproj.filters  convert.cpp  convert.h  custom_types.h  dllmain.cpp  libovr_wrapper.cpp  libovr_wrapper.h  linux_funcs.cpp  linux_funcs.h  logging.cpp  logging.h  resources.h  resources.rc  stdafx.cpp  stdafx.h  steamvr_abi.h  vrcompositor.cpp
OpenOVR/API/: ISystem_001.h  OCBaseSystem.cpp  OCBaseSystem.h
OpenOVR/Compositor/: compositor.cpp  compositor.h  compositor_backend.h  dx10compositor.cpp  dx10compositor.h  dx11compositor.cpp  dx11compositor.h  dx12compositor.cpp  dx12compositor.cpp.copy  dx12compositor.h  dxcompositor.h  glcompositor.cpp  glcompositor.h  glescompositor.cpp  glescompositor.h  vkcompositor.cpp  vkcompositor.h
OpenOVR/Drivers/: Backend.cpp  Backend.h  DriverManager.cpp  DriverManager.h
OpenOVR/FnTable/: FnTable.cpp  FnTable.h  generate.py
OpenOVR/Misc/: Config.cpp  Config.h  Haptics.cpp  Haptics.h  ScopeGuard.h  android_api.h  audio_override.cpp  audio_override.h  backtrace.cpp  backtrace.h  debug_helper.cpp  debug_helper.h  debugbreak.h  ini.c  ini.h  jsoncpp.cpp  lodepng.cpp  lodepng.h  resources_linux.S  resources_linux.s  xr_ext.h  xrmoreutils.cpp  xrmoreutils.h  xrutil.cpp  xrutil.h
OpenOVR/Misc/Input/: AnalogueToDigitalInput.cpp  AnalogueToDigitalInput.h  HolographicInteractionProfile.cpp  HolographicInteractionProfile.h  IndexControllerInteractionProfile.cpp  IndexControllerInteractionProfile.h  IndexHandPoses.h  InputData.h  InteractionProfile.cpp  InteractionProfile.h  KhrSimpleInteractionProfile.cpp  KhrSimpleInteractionProfile.h  LegacyControllerActions.h  OculusHandPoses.h  OculusInteractionProfile.cpp  OculusInteractionProfile.h  ReverbG2InteractionProfile.cpp  ReverbG2InteractionProfile.h  ViveInteractionProfile.cpp  ViveInteractionProfile.h  ViveTrackerInteractionProfile.cpp  ViveTrackerInteractionProfile.h
OpenOVR/Misc/Keyboard/: KeyboardLayout.cpp  KeyboardLayout.h  SudoFontMeta.cpp  SudoFontMeta.h  VRKeyboard.cpp  VRKeyboard.h
OpenOVR/Misc/json/: json-forwards.h  json.h
OpenOVR/OpenVR/: generate.py  generate.sh  ivrapplications.h  ivrchaperone.h  ivrcompositor.h  ivrrendermodels.h  ivrsettings.h  ivrsystem.h  openvr.h  split.py  vrannotation.h  vrtypes.h
OpenOVR/OpenVR/custom_interfaces/: IVRClientCore_002.h
OpenOVR/Reimpl/: BaseApplications.cpp  BaseApplications.h  BaseChaperone.cpp  BaseChaperone.h  BaseChaperoneSetup.cpp  BaseChaperoneSetup.h  BaseClientCore.cpp  BaseClientCore.h  BaseCompositor.cpp  BaseCompositor.h  BaseControlPanel.cpp  BaseControlPanel.h  BaseExtendedDisplay.cpp  BaseExtendedDisplay.h  BaseHeadsetView.cpp  BaseHeadsetView.h  BaseInput.cpp  BaseInput.h  BaseInputInternal.cpp  BaseInputInternal.h  BaseInput_Hand.cpp  BaseInput_HandPoses.hpp  BaseMailbox.cpp  BaseMailbox.h  BaseOverlay.cpp  BaseOverlay.h  BaseOverlayView.cpp  BaseOverlayView.h  BaseRenderModels.cpp  BaseRenderModels.h  BaseScreenshots.cpp  BaseScreenshots.h  BaseServerDriverHost.cpp  BaseServerDriverHost.h  BaseSettings.cpp  BaseSettings.h  BaseSystem.cpp  BaseSystem.h  CVRApplications.cpp  CVRChaperone.cpp  (+46 more)
OpenVRHeaders/custom_interfaces/: IVRCompositor_017.h  IVRControlPanel_006.h  IVRInputInternal_002.h  IVRMailbox_001.h
OpenVRHeaders/patches/: driver_itrackeddevicedriverprovider.ipatch
RuntimeSwitcher/: AppListForm.Designer.cs  AppListForm.cs  AppListForm.resx  ConfigReader.cs  Form1.Designer.cs  Form1.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Program.cs  RuntimeSwitcher.csproj  UpdateChecker.cs  packages.config
RuntimeSwitcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
SplitOpenVRHeaders/OpenVR/: generate.py  openvr-1.1.3.h  openvr-1.11.11.h  openvr-1.12.5.h
SplitOpenVRHeaders/OpenVR/custom_interfaces/: IVRClientCore_003.h  IVRCompositor_017.h  IVRControlPanel_006.h  IVRInputInternal_002.h  IVRMailbox_001.h
SplitOpenVRHeaders/OpenVR/patches/: driver_IVRServerDriverHost_005.ipatch
assets/: Ubuntu-30.sfn  en_gb.kb  notes.txt
doc/: OpenVRInterfaces.md  README.md  SplitAndGen.md
libovr/: Place LibOVR Here.txt
scripts/: empty.c  libparse.py  pch.cmake  split_headers.py  stubs.py  version.h.in
scripts/ci/: ubuntu.dockerfile  x86-toolchain.cmake
scripts/cmake/: genversion.cmake
scripts/stubs/: codegen.py  interface.py  interface_spec.py  ocapi.py
